# pulseq-zero

./: .gitignore  CHANGELOG.md  CLAUDE.md  PYPULSEQ_API.md  README.md  TOC.md  UNIFY.md  abstract.md  info.md  pyproject.toml  test_pypulseq_pulseqzero_support_matrix.md
.github/workflows/: adapter-check.yml  python-publish.yml
abstract/: abstract.md
demo/: main.py  pyproject.toml  test_pypulseq_sequence_all_funcs.py  write_tse.py
mockup/: optim_epi_inv.py  optim_tse.py  write_epi_inv.py  write_tse.py
mockup/pulseqzero/: __init__.py  loss.py
mockup/pulseqzero/facade/: __init__.py
mockup/pulseqzero/facade/facade_impl/: __init__.py  calc_duration.py  calc_rf_center.py  make_adc.py  make_block_pulse.py  make_delay.py  make_extended_trapezoid.py  make_sinc_pulse.py  make_trapezoid.py  opts.py  sequence.py
pulseqzero/adapter/: __init__.py  sequence.py
src/pulseqzero/: __init__.py  events.py  helpers.py  math.py  not_implemented.py  seq_convert.py
src/pulseqzero/adapter/: __init__.py  adc.py  delay.py  extended_trap_grad.py  grads.py  opts.py  pulses.py  seq_convert.py  sequence.py  to_pypulseq.py
src/pulseqzero/wrapper/: __init__.py  calc_ramp.py  grad_funcs.py  helpers.py  make_adc.py  make_basic.py  make_delay_trigger_label.py  make_grad.py  make_pulse.py  sequence.py
tests/: moritz.npz  offres.py  optimize.py  write_epi.py  write_gre.py
