[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "mrzerocore>=0.4.7",
    "pulseqzero",
    "pypulseq==1.5.0.post1",
    "torch>=2.11.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126"

[tool.uv.sources]
pulseqzero = { workspace = true }
